--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@socket.io/bun-engine": "^0.0.2",
+    "bootstrap": "^5.3.8",
     "socket.io": "^4.8.1"
   },
   "optionalDependencies": {
